--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,8 +12,16 @@
         android:title="@string/title_dashboard" />
 
     <item
+        android:id="@+id/navigation_switch"
+        android:icon="@drawable/ic_code_black_24dp"
+        android:title="@string/title_switch" />
+    <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+    <item
+        android:id="@+id/navigation_profil"
+        android:icon="@drawable/ic_person_black_24dp"
+        android:title="@string/title_profil" />
 
 </menu>
