--- a/app/src/main/res/drawable/ic_priority_high_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_priority_high_black_24dp.xml
@@ -5,5 +5,8 @@
         android:viewportHeight="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
+        android:pathData="M12,19m-2,0a2,2 0,1 1,4 0a2,2 0,1 1,-4 0"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M10,3h4v12h-4z"/>
 </vector>
