--- a/app/src/main/res/menu/navigation_host.xml
+++ b/app/src/main/res/menu/navigation_host.xml
@@ -3,9 +3,9 @@
     android:id="@+id/navigation_container">
 
     <item
-        android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/title_search" />
+        android:id="@+id/navigation_host"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_host" />
 
     <item
         android:id="@+id/navigation_notifications"
