--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ubiquasif.uqac.betterwithstrangers.MainActivity">
+    tools:context="ubiquasif.uqac.betterwithstrangers.GuestActivity">
 
     <FrameLayout
         android:id="@+id/main_container"
