--- a/app/src/main/res/layout/activity_first_connection.xml
+++ b/app/src/main/res/layout/activity_first_connection.xml
@@ -6,13 +6,29 @@
     android:layout_height="match_parent"
     tools:context="ubiquasif.uqac.betterwithstrangers.FirstConnectionActivity">
 
-    <Button
-        android:id="@+id/goToMainButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:text="Skip intro"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onSignInClick"
+            android:layout_marginBottom="10dp"
+            android:text="@string/sign_in_button" />
+
+        <TextView
+            android:id="@+id/connected_as"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
