--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -7,8 +7,24 @@
     android:layout_height="match_parent"
     tools:context="ubiquasif.uqac.betterwithstrangers.HostActivity">
 
+    <FrameLayout
+        android:id="@+id/main_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+
+    </FrameLayout>
+
+
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/message2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
