--- a/app/src/main/res/layout/fragment_createevent.xml
+++ b/app/src/main/res/layout/fragment_createevent.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ubiquasif.uqac.betterwithstrangers.Fragments.CreateEventFragment">
@@ -31,18 +32,36 @@
 
             //date de l'evenement
             <Button
+                android:id="@+id/picDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Choisir la date"
-                android:onClick="showDatePickerDialog" />
+                android:text="Choisir Date"
+                android:onClick="datePicker"/>
+
+            <TextView
+                android:id="@+id/show_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Date choisie"
+                android:textSize="18dp"
+                android:layout_toLeftOf="@+id/picDate"/>
 
 
             //heure de l'evenement
             <Button
+                android:id="@+id/picTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Choisir l'heure"
-                android:onClick="showTimePickerDialog" />
+                android:onClick="timePicker"/>
+
+            <TextView
+                android:id="@+id/show_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Heure choisie"
+                android:textSize="18dp"
+                android:layout_toLeftOf="@+id/picTime"/>
 
             //Lieu
 
