--- a/app/src/main/res/layout/fragment_createevent.xml
+++ b/app/src/main/res/layout/fragment_createevent.xml
@@ -16,7 +16,6 @@
             android:orientation="vertical" >
 
             //Nom de la soirée
-
             <EditText
                 android:id="@+id/nameEvent"
                 android:layout_width="match_parent"
@@ -24,16 +23,21 @@
                 android:layout_height="wrap_content"
                 android:ems="14"
                 android:hint="NomDeVotreSuperSoirée"
-                android:textSize="25dp"/>
+                android:textSize="25dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
+
 
             //Public/Privée
             <Switch
-            android:id="@+id/switch1"
-            android:layout_below="@id/nameEvent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Public / Privée"
-            android:textSize="18dp"/>
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:id="@+id/switch1"
+                android:layout_below="@id/nameEvent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Public / Privée   "
+                android:textSize="20dp"/>
 
             //Tags descriptif d'evenements
             <EditText
@@ -42,7 +46,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Tags, Mots clefs" />
+                android:hint="Tags, Mots clefs"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
 
             //date de l'evenement
             <TextView
@@ -50,8 +56,10 @@
                 android:layout_below="@id/tags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Date choisie"
-                android:textSize="18dp" />
+                android:text="Date choisie :"
+                android:textSize="18dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
 
             <Button
                 android:id="@+id/picDate"
@@ -61,7 +69,9 @@
                 android:onClick="datePicker"
                 android:layout_below="@id/tags"
                 android:layout_alignParentRight="true"
-                android:textSize="10dp"/>
+                android:textSize="10dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
 
 
             //heure de l'evenement
@@ -71,7 +81,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/picDate"
                 android:text="Heure choisie :"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
 
             <Button
                 android:id="@+id/picTime"
@@ -81,10 +93,22 @@
                 android:layout_height="wrap_content"
                 android:text="Modifier l'heure"
                 android:onClick="timePicker"
-                android:textSize="10dp"/>
+                android:textSize="10dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"/>
 
             //Lieu
-
+            <EditText
+                android:id="@+id/placeEvent"
+                android:layout_width="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content"
+                android:ems="14"
+                android:hint="LieuDeVotreSuperSoirée"
+                android:textSize="20dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_below="@id/picTime"/>
 
 
             //Bouton de création de soirée
@@ -96,11 +120,13 @@
                 app:backgroundTint="@color/colorPrimary"
                 android:src="@drawable/com_facebook_button_like_icon_selected"
                 android:layout_margin="@dimen/fui_auth_method_button_margin"
-                android:layout_below="@id/picTime"
+                android:layout_below="@id/placeEvent"
                 android:layout_alignParentRight="true"
                 app:borderWidth="0dp"
                 app:elevation="6dp"
-                app:fabSize="normal"/>
+                app:fabSize="normal"
+                android:onClick="addEvent"/>
+
         </RelativeLayout>
 
 
