New events are added to Firestore database (WIP) Fixed weird time display (e.g. 14h7 instead of 14h07) Note: there's a lot of strings that should already be resources ;)

--- a/app/src/main/res/layout/fragment_createevent.xml
+++ b/app/src/main/res/layout/fragment_createevent.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp">
 
@@ -36,11 +37,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
-                android:text="Événement public ?"
+                android:text="Événement privé ?"
                 android:textSize="18sp" />
 
             <Switch
-                android:id="@+id/switch1"
+                android:id="@+id/private_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
