--- a/app/src/main/res/layout/fragment_createevent.xml
+++ b/app/src/main/res/layout/fragment_createevent.xml
@@ -1,143 +1,144 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ubiquasif.uqac.betterwithstrangers.Fragments.CreateEventFragment">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp">
+        android:layout_height="wrap_content">
 
-        <!--Nom de la soirée-->
-        <EditText
-            android:id="@+id/nameEvent"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="10dp"
-            android:ems="14"
-            android:hint="Nom de votre événement"
-            android:textSize="18sp" />
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp">
 
-        <LinearLayout
-            android:id="@+id/public_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameEvent"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:text="Événement privé ?"
-                android:textSize="18sp" />
-
-            <Switch
-                android:id="@+id/private_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <!--Tags descriptifs d'événements-->
-        <EditText
-            android:id="@+id/tags"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/public_layout"
-            android:layout_marginBottom="10dp"
-            android:ems="10"
-            android:hint="Mots-clés" />
-
-        <!--Date de l'événement-->
-        <LinearLayout
-            android:id="@+id/date_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tags"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/show_date"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Date choisie :"
-                android:layout_weight="1"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/picDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="datePicker"
-                android:text="Modifier la date"
-                android:textSize="10sp" />
-
-        </LinearLayout>
-
-
-        <!--Heure de l'événement-->
-        <LinearLayout
-            android:id="@+id/time_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/date_layout"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/show_time"
+            <!--Nom de la soirée-->
+            <EditText
+                android:id="@+id/nameEvent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Heure choisie :"
-                android:layout_weight="1"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="10dp"
+                android:ems="14"
+                android:hint="Nom de votre événement"
                 android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/picTime"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/public_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="timePicker"
-                android:text="Modifier l'heure"
-                android:textSize="10sp" />
+                android:layout_below="@id/nameEvent"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1"
+                    android:text="Événement privé ?"
+                    android:textSize="18sp" />
 
-        <!--Lieu-->
-        <EditText
-            android:id="@+id/placeEvent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/time_layout"
-            android:ems="14"
-            android:hint="Lieu de l'événement"
-            android:textSize="18sp" />
+                <Switch
+                    android:id="@+id/private_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
-        <!--Bouton de création de soirée-->
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/placeEvent"
-            android:layout_margin="@dimen/fui_auth_method_button_margin"
-            android:onClick="addEvent"
-            android:src="@drawable/com_facebook_button_like_icon_selected"
-            android:tint="@color/cardview_light_background"
-            app:backgroundTint="@color/colorPrimary"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:fabSize="normal" />
-    </RelativeLayout>
+            <!--Tags descriptifs d'événements-->
+            <EditText
+                android:id="@+id/tags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/public_layout"
+                android:layout_marginBottom="10dp"
+                android:ems="10"
+                android:hint="Mots-clés" />
 
-</ScrollView>
+            <!--Date de l'événement-->
+            <LinearLayout
+                android:id="@+id/date_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tags"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/show_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Date choisie :"
+                    android:layout_weight="1"
+                    android:textSize="18sp" />
+
+                <Button
+                    android:id="@+id/picDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Modifier la date"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <!--Heure de l'événement-->
+            <LinearLayout
+                android:id="@+id/time_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/date_layout"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/show_time"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Heure choisie :"
+                    android:layout_weight="1"
+                    android:textSize="18sp" />
+
+                <Button
+                    android:id="@+id/picTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Modifier l'heure"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <!--Lieu-->
+            <EditText
+                android:id="@+id/placeEvent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/time_layout"
+                android:ems="14"
+                android:hint="Lieu de l'événement"
+                android:textSize="18sp" />
+        </RelativeLayout>
+    </ScrollView>
+
+    <!--Bouton de création de soirée-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/com_facebook_button_like_icon_selected"
+        app:backgroundTint="@color/colorPrimary"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal" />
+
+</RelativeLayout>
