--- a/app/src/main/res/layout/fragment_createevent.xml
+++ b/app/src/main/res/layout/fragment_createevent.xml
@@ -74,7 +74,7 @@
                     android:id="@+id/show_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Date choisie :"
+                    android:text="@string/picked_date"
                     android:layout_weight="1"
                     android:textSize="18sp" />
 
@@ -101,7 +101,7 @@
                     android:id="@+id/show_time"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Heure choisie :"
+                    android:text="@string/picked_time"
                     android:layout_weight="1"
                     android:textSize="18sp" />
 
