--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,10 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ubiquasif.uqac.betterwithstrangers.Fragments.NotificationFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="ubiquasif.uqac.betterwithstrangers.Fragments.DashboardFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,8 +19,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Normalement c'est la liste des notifications.." />
+                android:text="Normalement c'est le dashboard.." />
         </LinearLayout>
     </ScrollView>
 
-</FrameLayout>
+
+</android.support.constraint.ConstraintLayout>
