--- a/app/src/main/res/menu/navigation_host.xml
+++ b/app/src/main/res/menu/navigation_host.xml
@@ -3,9 +3,9 @@
     android:id="@+id/navigation_container">
 
     <item
-        android:id="@+id/navigation_host"
+        android:id="@+id/navigation_party"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_host" />
+        android:title="@string/title_party" />
 
     <item
         android:id="@+id/navigation_notifications"
@@ -13,14 +13,9 @@
         android:title="@string/title_notifications" />
 
     <item
-        android:id="@+id/navigation_switch"
-        android:icon="@drawable/ic_code_black_24dp"
-        android:title="@string/title_switch"/>
-
-    <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_timeline"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_timeline" />
 
     <item
         android:id="@+id/navigation_profil"
