Added some parts for ProfileFragment
- Added minibiography
- Added NachosTextView for preferences
- Added rating view for Host and Guest views
TODO : Handle NachosTextView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation_host" />
+        app:menu="@menu/navigation_bar" />
 
 </RelativeLayout>
