--- a/app/src/main/res/layout/fragment_createevent.xml
+++ b/app/src/main/res/layout/fragment_createevent.xml
@@ -123,7 +123,17 @@
                 android:ems="14"
                 android:hint="Lieu de l'événement"
                 android:textSize="18sp" />
+
+            <FrameLayout
+                android:id="@+id/autocomplete_fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/placeEvent"
+                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+                />
+
         </RelativeLayout>
+
     </ScrollView>
 
     <!--Bouton de création de soirée-->
@@ -140,5 +150,7 @@
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal" />
+
+
 
 </RelativeLayout>
