--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -131,6 +131,13 @@
                 android:isIndicator="true" />
         </LinearLayout>
 
+
+        <Button
+            android:id="@+id/test_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TEST" />
+
         <Button
             android:id="@+id/sign_out_button"
             android:layout_width="match_parent"
